--- a/install/index.html
+++ b/install/index.html
@@ -214,6 +214,8 @@
 
 									<label for="expansion">Max expansion</label>
 									<select id="expansion" required>
+										<option value="legion">Legion</option>
+										<option value="wod">WoD</option>
 										<option value="cataclysm">Cataclysm</option>
 										<option value="wotlk">Wrath of the Lich King</option>
 										<option value="tbc">The Burning Crusade</option>
