--- a/install/index.html
+++ b/install/index.html
@@ -215,7 +215,7 @@
 									<label for="expansion">Max expansion</label>
 									<select id="expansion" required>
 										<option value="legion">Legion</option>
-										<option value="wod">WoD</option>
+										<option value="wod">Warlords of Draenor</option>
 										<option value="cataclysm">Cataclysm</option>
 										<option value="wotlk">Wrath of the Lich King</option>
 										<option value="tbc">The Burning Crusade</option>
