--- a/install/index.html
+++ b/install/index.html
@@ -106,9 +106,9 @@
 								<h2><img src="images/icons/black16x16/ic_empty_document.png"/> Introduction</h2>
 								<span>
 									<div class="introduction">
-										<h3>Welcome to FusionCMS</h3>
+										<h3>Welcome to Neith-Legion CMS</h3>
 									
-										<b>Dear customer</b>, We are happy to introduce you to the next chapter of our very own FusionCMS. Years have passed since the initial release and the system has grown better and stronger for every version. The core of this beast is powered by clean, object oriented PHP code, kept in shape by the incredibly powerful CodeIgniter framework. On the front we also make sure to amaze your visitors with more Javascript-powered live interactions than ever before.
+										<b>Dear friends</b>, I'm happy to introduce you to the free version of WOW CMS. This release will grown better and stronger for every version. The core of this CMS is a powered object oriented PHP code.
 									</div>
 								</span>
 
@@ -165,7 +165,7 @@
                                         <div class="apache-modules">
                                             <h4>Apache Modules</h4>
                                             
-    										<b>We recommend FusionCMS in combination with an Apache Webserver.<br><br>
+    										<b>I recommend Neith-Legion CMS in combination with an Apache Webserver.<br><br>
                                             The Apache modules you'll need are:</b> <br>
                                             mod_rewrite, mod_headers, mod_expires, mod_deflate
 
@@ -372,19 +372,19 @@
 		<footer>
 			<div class="center_1020">
 				<div class="divider2"></div>
-				<aside id="logo"><a href="http://fusion-hub.com" class="logo"></a></aside>
+				<aside id="logo"><a href="http://#" class="logo"></a></aside>
 				<div class="divider"></div>
 				<aside id="links">
-					<a href="http://fusion-hub.com" target="_blank">FusionHub</a>
-					<a href="http://fusion-hub.com/modules" target="_blank">Modules</a>
-					<a href="http://fusion-hub.com/themes" target="_blank">Themes</a>
-					<a href="http://fusion-hub.com/support" target="_blank">Support</a>
+					<a href="http://#" target="_blank">Neith-Legion</a>
+					<a href="http://#" target="_blank">Modules</a>
+					<a href="http://#" target="_blank">Themes</a>
+					<a href="http://#" target="_blank">Support</a>
 				</aside>
 				<div class="divider"></div>
 				<aside id="facebook">
-					<h1>Like us on Facebook!</h1>
-					<div id="fb_icon"></div>
-					<a href="http://facebook.com/HeroicForge" target="_blank">HeroicForge</a>
+					<h1>Feel free to use</h1>
+
+					<a href="http://#" target="_blank">*Neith-Legion Free CMS*</a>
 				</aside>
 				<div class="divider"></div>
 				<aside id="html5">
