another fix of expansion  ..F....K!!
i was very tired  when i made changes on website :(

--- a/install/index.html
+++ b/install/index.html
@@ -216,6 +216,7 @@
 									<select id="expansion" required>
 										<option value="legion">Legion</option>
 										<option value="wod">Warlords of Draenor</option>
+										<option value="mop">Mists of Pandaria</option>
 										<option value="cataclysm">Cataclysm</option>
 										<option value="wotlk">Wrath of the Lich King</option>
 										<option value="tbc">The Burning Crusade</option>
